--- a/asset/index.html
+++ b/asset/index.html
@@ -24,43 +24,85 @@
       </nav>
     </header>
     <section id="home">
-        <img src="../asset/Clip path group.png" alt="" class="clip">
+      <img src="../asset/Clip path group.png" alt="" class="clip" />
       <div class="choose">
-        <img src="../asset/home-star.png" alt="" class="ch-img">
+        <img src="../asset/home-star.png" alt="" class="ch-img" />
         <div class="first-sec">
+          <h1>choose your best <span>yoga</span> teacher</h1>
+          <p>
+            calm your mind and body with the best yoga teachers available. relax
+            your day and stay positive
+          </p>
+          <a href="">get started free</a>
 
-            <h1>choose your best <span>yoga</span> teacher</h1>
-            <p>
-          calm your mind and body with the best yoga teachers available. relax
-          your day and stay positive
-         </p>
-         <a href="">get started free</a>
+          <div class="text-ul">
+            <ul>
+              <li><h1>300+</h1></li>
+              <li><p>yoga class</p></li>
+            </ul>
 
-         <div class="text-ul">
-          <ul>
-            <li><h1>300+</h1></li>
-            <li><p>yoga class</p></li>
-          </ul>
-
-          <ul>
-            <li><h1>40+</h1></li>
-            <li><p>participants</p></li>
-          </ul>
-         </div>
-    </div>
+            <ul>
+              <li><h1>40+</h1></li>
+              <li><p>participants</p></li>
+            </ul>
+          </div>
+        </div>
         <div class="choose-img">
-            <img src="../../home-yoga.png" alt="">
+          <img src="../../home-yoga.png" alt="" />
         </div>
       </div>
     </section>
     <section id="health">
-        <h2> #01 </h2>
-        <img src="../asset/List box.png" alt="">
-        <p>Get a list of specific influencers in your niche at your fingertips so you can focus on managing your status.</p>
-        <div class="next-p">
-          <img src="../../Group 13.png" alt="">
+      <h2>#01</h2>
+      <img src="../asset/List box.png" alt="" />
+      <p>
+        Get a list of specific influencers in your niche at your fingertips so
+        you can focus on managing your status.
+      </p>
+      <div class="next-p">
+        <img src="../../Group 13.png" alt="" />
+      </div>
+    </section>
+
+    <section id="routine">
+      <img src="../../Image group.png" alt="">
+      <div class="happiness">
+        <h2>Bring Happiness To Good Health!</h2>
+        <p>
+          If you take care of your good health, take care of your mentality and
+          lead a healthy life with positive thoughts every day.
+        </p>
+        <div>
+          <a href="">Let’s Start</a>
+          <img src="../../Vector 33.png" alt="">
         </div>
-        
+      </div>
+    </section>
+    <section id="follow">
+      <div class="anytime">
+        <h2>Anytime, Any Place, Any Workout</h2>
+        <p>Take your routine at any time of your day, with the new videos and with the teachers who will guide you.</p>
+        <div class="vector">
+          <a href="">Let’s Start</a>
+           <img src="../../Vector 33.png" alt="">
+       </div>
+       </div>
+      <div class="im">
+        <img src="../asset/Images routine.png" alt="">
+      </div>
+    </section>
+    <section class="news">
+      <div class="join">
+        <h2>Join our newsletter</h2>
+        <p>Subscribe to our newsletter to be aware of many things on discounts, gifts, training and much more. Just enter your email.</p>
+        <div class="sub">
+          <p>For latest update send mail</p>
+          <div class="img-a">
+            <a href="">Subscribe</a>
+            <img src="../../Vector 33.png" alt="">
+           </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
