--- a/asset/index.html
+++ b/asset/index.html
@@ -48,7 +48,7 @@
           </div>
         </div>
         <div class="choose-img">
-          <img src="../../home-yoga.png" alt="" />
+          <img src="home-yoga.png" alt="" />
         </div>
       </div>
     </section>
@@ -60,12 +60,12 @@
         you can focus on managing your status.
       </p>
       <div class="next-p">
-        <img src="../../Group 13.png" alt="" />
+        <img src="./Group 13.png" alt="" />
       </div>
     </section>
 
     <section id="routine">
-      <img src="../../Image group.png" alt="">
+      <img src="./Image group.png" alt="">
       <div class="happiness">
         <h2>Bring Happiness To Good Health!</h2>
         <p>
@@ -96,13 +96,42 @@
         <h2>Join our newsletter</h2>
         <p>Subscribe to our newsletter to be aware of many things on discounts, gifts, training and much more. Just enter your email.</p>
         <div class="sub">
-          <p>For latest update send mail</p>
+          <p class="para2" >For latest update send mail</p>
           <div class="img-a">
             <a href="">Subscribe</a>
-            <img src="../../Vector 33.png" alt="">
+            <img src="./Vector 33.png" alt="">
            </div>
         </div>
       </div>
     </section>
+    <footer>
+      <div class="foot">
+        <div class="all">
+          <div class="yoga-first">
+              <h3>Yoga</h3>
+              <p>Take care of your health and your mind with the best Yoga classes.</p>
+          </div>
+          <div class="sol">
+            <h3>Address</h3>
+            <p>12345 M/01 Sol Avenue, Lima, Peru</p>
+          </div>
+          <div class="contact">
+            <h3>Contact</h3>
+            <p>+123 456 7890
+              yoga@email.com</p>
+          </div>
+          <div class="office">
+            <h3>Office</h3>
+            <p>Monday - Saturday
+              9AM - 10PM</p>
+          </div>
+        </div>
+        <div class="line"></div>
+        <div class="socials">
+          <img src="./Social footer.png" alt="">
+          <p>Copyright Bedimcode. All rights reserved</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
