--- a/asset/index.html
+++ b/asset/index.html
@@ -6,21 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>yoga</title>
     <link rel="stylesheet" href="asset.css" />
+    <link rel="icon" href="../moon_symbol_16px.png" />
   </head>
   <body>
     <header>
       <nav class="header-nav">
-        <a href="">Yoga</a>
+        <div class="head">
+          <a class="logo" href="">Yoga</a>
+          <div class="btn">
+            <ul class="header-ul">
+              <li><a href="home">Home</a></li>
+              <li><a href="health">health</a></li>
+              <li><a href="routine">routine</a></li>
+              <li><a href="follow">follow</a></li>
+            </ul>
 
-        <ul class="header-ul">
-          <li><a href="home">Home</a></li>
-          <li><a href="health">health</a></li>
-          <li><a href="routine">routine</a></li>
-          <li><a href="follow">follow</a></li>
-          <li>
-            <a href=""><img src="../moon_symbol_16px.png" alt="" /></a>
-          </li>
-        </ul>
+            <ul class="ri">
+              <li class="ri">
+                <img src="../moon_symbol_16px.png" alt="" />
+              </li>
+              <li><img src="./ri_apps-2-line (1).png" alt="" class="app" /></li>
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
     <section id="home">
@@ -65,7 +73,7 @@
     </section>
 
     <section id="routine">
-      <img src="./Image group.png" alt="">
+      <img src="./Image group.png" alt="" />
       <div class="happiness">
         <h2>Bring Happiness To Good Health!</h2>
         <p>
@@ -74,42 +82,62 @@
         </p>
         <div>
           <a href="">Let’s Start</a>
-          <img src="../../Vector 33.png" alt="">
+          <img src="../../Vector 33.png" alt="" />
         </div>
       </div>
     </section>
     <section id="follow">
       <div class="anytime">
         <h2>Anytime, Any Place, Any Workout</h2>
-        <p>Take your routine at any time of your day, with the new videos and with the teachers who will guide you.</p>
+        <p>
+          Take your routine at any time of your day, with the new videos and
+          with the teachers who will guide you.
+        </p>
         <div class="vector">
           <a href="">Let’s Start</a>
-           <img src="../../Vector 33.png" alt="">
-       </div>
-       </div>
+          <img src="../../Vector 33.png" alt="" />
+        </div>
+      </div>
       <div class="im">
-        <img src="../asset/Images routine.png" alt="">
+        <img src="../asset/Images routine.png" alt="" />
       </div>
     </section>
     <section class="news">
       <div class="join">
         <h2>Join our newsletter</h2>
-        <p>Subscribe to our newsletter to be aware of many things on discounts, gifts, training and much more. Just enter your email.</p>
+        <p>
+          Subscribe to our newsletter to be aware of many things on discounts,
+          gifts, training and much more. Just enter your email.
+        </p>
         <div class="sub">
-          <p class="para2" >For latest update send mail</p>
+          <p class="para2">For latest update send mail</p>
           <div class="img-a">
             <a href="">Subscribe</a>
-            <img src="./Vector 33.png" alt="">
-           </div>
+            <img src="./Vector 33.png" alt="" />
+          </div>
         </div>
       </div>
+    </section>
+    <section class="fourth">
+      <div><img src="./follow-yoga-1.png" alt="" class="yoga-1" /></div>
+      <div class="insta">
+        <p>Follow Us On Instagram <span class="yo"> #YOGA </span></p>
+        <div class="fol-img">
+          <a href="">follow</a>
+          <img src="./Vector 33.png" alt="" />
+        </div>
+      </div>
+      <div><img src="./follow-yoga-2.png" alt="" class="yoga-2" /></div>
+      <div><img src="./Images follow group 2.png" alt="" class="yoga-3" /></div>
     </section>
     <footer>
       <div class="foot">
         <div class="all">
           <div class="yoga-first">
-              <h3>Yoga</h3>
-              <p>Take care of your health and your mind with the best Yoga classes.</p>
+            <h3>Yoga</h3>
+            <p>
+              Take care of your health and your mind with the best Yoga classes.
+            </p>
           </div>
           <div class="sol">
             <h3>Address</h3>
@@ -117,18 +145,16 @@
           </div>
           <div class="contact">
             <h3>Contact</h3>
-            <p>+123 456 7890
-              yoga@email.com</p>
+            <p>+123 456 7890 yoga@email.com</p>
           </div>
           <div class="office">
             <h3>Office</h3>
-            <p>Monday - Saturday
-              9AM - 10PM</p>
+            <p>Monday - Saturday 9AM - 10PM</p>
           </div>
         </div>
         <div class="line"></div>
         <div class="socials">
-          <img src="./Social footer.png" alt="">
+          <img src="./Social footer.png" alt="" />
           <p>Copyright Bedimcode. All rights reserved</p>
         </div>
       </div>
